--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.gold {
+  @apply bg-gradient-to-r from-[#8F612D] via-[#EADF86] to-[#8F612D];
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.btn-hover {
+  @apply hover:scale-105 active:scale-95;
 }
